--- a/wolf/agent/src/main/resources/log4j.properties
+++ b/wolf/agent/src/main/resources/log4j.properties
@@ -8,11 +8,18 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss,SSS} %-5p [%c::%M] %m%n
 
-log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FILE.DatePattern='.'yyyy-MM-dd
+log4j.appender.FILE=org.apache.log4j.RollingFileAppender
 log4j.appender.FILE.File=../logs/wolf-agent.log
+log4j.appender.FILE.MaxFileSize=50MB
+log4j.appender.FILE.MaxBackupIndex=4
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss,SSS} %-5p [%c::%M] %m%n
+
+log4j.appender.FILED=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.FILED.DatePattern='.'yyyy-MM-dd
+log4j.appender.FILED.File=../logs/wolf-agent.log
+log4j.appender.FILED.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILED.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss,SSS} %-5p [%c::%M] %m%n
 
 log4j.rootCategory=INFO, CONSOLE, FILE
 
