--- a/wolf/bin/_setenv.sh.sample
+++ b/wolf/bin/_setenv.sh.sample
@@ -1,8 +1,4 @@
-
-JAVA_HOME=/opt/java8
-
-M2_HOME=/opt/apache-maven-3.3.9
-
-ANT_HOME=/opt/apache-ant-1.9.7
-
-
+#!/bin/bash
+export JAVA_HOME=/opt/java8
+export M2_HOME=/opt/apache-maven-3.3.9
+export ANT_HOME=/opt/apache-ant-1.9.7
