--- a/wolf/server/src/main/resources/log4j.properties
+++ b/wolf/server/src/main/resources/log4j.properties
@@ -12,4 +12,6 @@ log4j.rootCategory=INFO, CONSOLE
 
 log4j.category.it.mate=DEBUG
 
+#log4j.category.org.springframework=DEBUG
 log4j.category.org.springframework=INFO
+
