--- a/wolf/agent/src/main/resources/wolf.properties
+++ b/wolf/agent/src/main/resources/wolf.properties
@@ -2,3 +2,11 @@
 agent.delay=5000
 
 agent.serverurl=http://jbossews-wolfsrv.rhcloud.com/
+agent.serverurl=http://localhost:8080/
+
+agent.status.method=/rest/postAgentStatusObject
+#agent.status.trace=true
+agent.status.sendJson=true
+
+agent.test.method=/rest/getAgentStatusObject
+
