--- a/wolf/agent/src/main/conf/wolf.properties
+++ b/wolf/agent/src/main/conf/wolf.properties
@@ -1,12 +1,13 @@
 
-agent.delay=5000
+agent.delay=10000
 
 agent.serverurl=http://jbossews-wolfsrv.rhcloud.com/
-agent.serverurl=http://localhost:8080/
+#agent.serverurl=http://localhost:8080/
 
 agent.status.method=/rest/postAgentStatusObject
-#agent.status.trace=true
 agent.status.sendJson=true
+#agent.status.trace=true
 
 agent.test.method=/rest/getAgentStatusObject
 
+#agent.test.wol=true
