--- a/testleaflet/gwt/pom.xml
+++ b/testleaflet/gwt/pom.xml
@@ -9,9 +9,7 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <webappDirectory>${project.build.directory}/${project.artifactId}</webappDirectory>
-    
     <gwt.version>2.7.0</gwt.version>
-    
     <spring.version>3.1.2.RELEASE</spring.version>
   </properties>
 
@@ -25,6 +23,12 @@
   <dependencies>
       
     <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>5.0.3</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-servlet</artifactId>
       <version>${gwt.version}</version>
@@ -34,7 +38,6 @@
       <artifactId>gwt-user</artifactId>
       <version>${gwt.version}</version>
     </dependency>
-    
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-dev</artifactId>
@@ -48,6 +51,12 @@
       <version>2.5.1</version>
     </dependency>
       
+    <dependency>
+      <groupId>it.mate</groupId>
+      <artifactId>phgcommons</artifactId>
+      <version>1.0</version>
+    </dependency>
+    
     <dependency>
       <groupId>it.mate</groupId>
       <artifactId>onscommons</artifactId>
