--- a/wolf/adapter/pom.xml
+++ b/wolf/adapter/pom.xml
@@ -17,7 +17,7 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring.version>4.3.0.RELEASE</spring.version>
+    <spring.version>4.3.16</spring.version>
     <log4j.version>1.2.14</log4j.version>
   </properties>
 
