--- a/gaecommons/pom.xml
+++ b/gaecommons/pom.xml
@@ -10,7 +10,10 @@
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <!-- richiesto da github:
     <spring.version>3.2.15.RELEASE</spring.version>
+    -->
+    <spring.version>4.3.15.RELEASE</spring.version>
     <log4j.version>1.2.14</log4j.version>
     <appengine.target.version>1.9.15</appengine.target.version>
   </properties>
